[package]
name = "tree-select-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
crossterm = "0.22.1"
serde = "1.0"
serde_json = "1.0"
tui = "0.18"
crokey = "0.4"
unicode-width = "0.1.9"
fuzzy-matcher = "0.3"
itertools = "0.10"
derive_more = "0.99"
nom = "7"
nom-unicode = "0.3"
